add fries img to assets, add ingredients and steps markup

--- a/recipes/keylime-pie.html
+++ b/recipes/keylime-pie.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keylime Pie</title>
 </head>
+
 <body>
     <h1>KeyLime Pie</h1>
     <a href="../index.html">Home</a>
+    <figure>
+        <figcaption>KeyLime Pie</figcaption>
+        <img width="400" src="../assets/keylime.jpg" alt="slice of keylime pie with purple whip cream">
+    </figure>
+    <div>
+        <h2>Description</h2>
+        <p>This easy key lime pie recipe is the 1999 American Pie Council's National Pie Championship's 1st place winner
+        </p>
+        <p>Quick and Easy Category</p>
+    </div>
+    <div>
+        <h2>Ingredients:</h2>
+        <ul>
+            <li>5 large egg yolks, beaten</li>
+            <li>1 (14 ounce) can sweetened condensed milk</li>
+            <li>½ cup key lime juice</li>
+            <li>1 (9-inch) prepared graham cracker crust</li>
+        </ul>
+
+        <h2>Steps:</h2>
+        <ol>
+            <li>Gather all ingredients</li>
+            <li>Preheat the oven to 375 degrees F (190 degrees C)</li>
+            <li>Combine sweetened condensed milk, key lime juice, and egg yolks in a large <br /> bowl; mix well</li>
+            <li>Pour mixture into unbaked graham cracker crust</li>
+            <li>Bake in the preheated oven until filling is set, about 15 minutes</li>
+            <li>Allow to cool completely before slicing</li>
+        </ol>
+    </div>
 </body>
+
 </html>
