style start page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Odin Recipes</title>
 </head>
+
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/keylime-pie.html">KeyLime Pie</a>
+    <div class="start-page-container">
+    <header>
+        <h1>Odin Recipes</h1>
+        <nav>
+            <ul>
+                <li><a href="recipes/keylime-pie.html">KeyLime Pie</a></li>
+                <li><a href="recipes/steak-fries.html">Steak Fries</a></li>
+                <li><a href="recipes/kale-salad.html">Kale Salad</a></li>
+            </ul>
+        </nav>
+    </header>
+     <p class="bg-img-credits">Photo by <a href="https://unsplash.com/@claybanks?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Clay Banks</a> on <a href="https://unsplash.com/photos/black-chopsticks-in-white-ceramic-bowl-on-table-1Uj0HmqQFGk?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+    </div>
 </body>
+
 </html>
