--- a/recipes/kale-salad.html
+++ b/recipes/kale-salad.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <h1>Kale Feta Salad</h1>
-    <a href="../index.html">Home</a>
+    <h1><a href="../index.html">Kale Feta Salad</a></h1>
+    
     <figure>
         <figcaption>Kale Feta Salad</figcaption>
         <img width="400" src="../assets/salad.webp" alt="slice of keylime pie with purple whip cream">
