--- a/recipes/keylime-pie.html
+++ b/recipes/keylime-pie.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <h1>KeyLime Pie</h1>
-    <a href="../index.html">Home</a>
+    <h1><a href="../index.html">KeyLime Pie</a></h1>
+    
     <figure>
         <figcaption>KeyLime Pie</figcaption>
         <img width="400" src="../assets/keylime.jpg" alt="slice of keylime pie with purple whip cream">
