--- a/recipes/steak-fries.html
+++ b/recipes/steak-fries.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <h1>KeyLime Pie</h1>
-    <a href="../index.html">Home</a>
+    <h1><a href="../index.html">Steak Fries</a></h1>
+    
     <figure>
         <figcaption>Steak Fries</figcaption>
         <img width="400" src="../assets/fries.webp" alt="slice of keylime pie with purple whip cream">
