style recipe pages

--- a/recipes/kale-salad.html
+++ b/recipes/kale-salad.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Kale Feta Salad</title>
 </head>
 
-<body>
-    <h1><a href="../index.html">Kale Feta Salad</a></h1>
+<body class="recipe-page-body">
+    <h1 class="recipe-header"><a href="../index.html">Kale Feta Salad</a></h1>
     
     <figure>
         <figcaption>Kale Feta Salad</figcaption>
-        <img width="400" src="../assets/salad.webp" alt="slice of keylime pie with purple whip cream">
+        <img src="../assets/salad.webp" alt="slice of keylime pie with purple whip cream">
     </figure>
     <div>
         <h2>Description</h2>
@@ -45,6 +46,9 @@
             <li>Pour vinegar over kale and toss to coat. Fold apple, feta cheese, currants, and pine nuts into kale</li>
         </ol>
     </div>
+    <p class="bg-img-credits align-to-bottom">
+        Background img <a href="https://unsplash.com/@zhpix?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Pascal Meier</a> on <a href="https://unsplash.com/photos/restaurant-signage-Mgv-3VpZuSs?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+    </p>
 </body>
 
 </html>
