--- a/recipes/keylime-pie.html
+++ b/recipes/keylime-pie.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Keylime Pie</title>
 </head>
 
-<body>
-    <h1><a href="../index.html">KeyLime Pie</a></h1>
+<body class="recipe-page-body">
+    <h1 class="recipe-header"><a href="../index.html">KeyLime Pie</a></h1>
     
     <figure>
         <figcaption>KeyLime Pie</figcaption>
@@ -16,7 +17,7 @@
     </figure>
     <div>
         <h2>Description</h2>
-        <p>This easy key lime pie recipe is the 1999 American Pie Council's National Pie Championship's 1st place winner
+        <p>This easy key lime pie recipe is the 1999 American Pie Council's <br /> National Pie Championship's 1st place winner
         </p>
         <p>Quick and Easy Category</p>
     </div>
@@ -39,6 +40,9 @@
             <li>Allow to cool completely before slicing</li>
         </ol>
     </div>
+    <p class="bg-img-credits align-to-bottom">
+        Background img <a href="https://unsplash.com/@zhpix?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Pascal Meier</a> on <a href="https://unsplash.com/photos/restaurant-signage-Mgv-3VpZuSs?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+    </p>
 </body>
 
 </html>
