--- a/recipes/steak-fries.html
+++ b/recipes/steak-fries.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Steak Fries</title>
 </head>
 
-<body>
-    <h1><a href="../index.html">Steak Fries</a></h1>
+<body class="recipe-page-body">
+    <h1 class="recipe-header"><a href="../index.html">Steak Fries</a></h1>
     
     <figure>
         <figcaption>Steak Fries</figcaption>
@@ -38,5 +39,8 @@
             <li>Bake in the preheated oven, turning once, until brown and crispy, about 25 <br /> minutes</li>
         </ol>
     </div>
+    <p class="bg-img-credits align-to-bottom">
+        Background img <a href="https://unsplash.com/@zhpix?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Pascal Meier</a> on <a href="https://unsplash.com/photos/restaurant-signage-Mgv-3VpZuSs?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+    </p>
 </body>
 </html>
